--- a/modules/utils-core/Cargo.toml
+++ b/modules/utils-core/Cargo.toml
@@ -25,7 +25,7 @@ spin = { workspace = true, default-features = false, features = ["mutex", "spin_
 portable-atomic = { workspace = true, default-features = false, features = ["critical-section"] }
 cortex-m = { workspace = true, optional = true }
 portable-atomic-util = { version = "0.2", default-features = false, features = ["alloc"] }
-thiserror = { workspace = true }
+thiserror = { workspace = true, default-features = false }
 
 [dev-dependencies]
 criterion = { workspace = true }
