--- a/modules/actor-core/Cargo.toml
+++ b/modules/actor-core/Cargo.toml
@@ -54,3 +54,35 @@ path = "examples/behaviors_state_transition_typed_no_std/main.rs"
 [[example]]
 name = "serialization_custom_no_std"
 path = "examples/serialization_custom_no_std/main.rs"
+
+[[example]]
+name = "scheduler_once_no_std"
+path = "examples/scheduler_once_no_std/main.rs"
+
+[[example]]
+name = "scheduler_once_typed_no_std"
+path = "examples/scheduler_once_typed_no_std/main.rs"
+
+[[example]]
+name = "scheduler_periodic_no_std"
+path = "examples/scheduler_periodic_no_std/main.rs"
+
+[[example]]
+name = "scheduler_periodic_typed_no_std"
+path = "examples/scheduler_periodic_typed_no_std/main.rs"
+
+[[example]]
+name = "scheduler_cancellation_no_std"
+path = "examples/scheduler_cancellation_no_std/main.rs"
+
+[[example]]
+name = "scheduler_cancellation_typed_no_std"
+path = "examples/scheduler_cancellation_typed_no_std/main.rs"
+
+[[example]]
+name = "scheduler_diagnostics_no_std"
+path = "examples/scheduler_diagnostics_no_std/main.rs"
+
+[[example]]
+name = "scheduler_diagnostics_typed_no_std"
+path = "examples/scheduler_diagnostics_typed_no_std/main.rs"
