feat: add tick driver configuration and abstractions with auto-detection and fallback policies

--- a/modules/actor-core/Cargo.toml
+++ b/modules/actor-core/Cargo.toml
@@ -15,6 +15,7 @@ readme = "../../README.md"
 default = []
 alloc = []
 alloc-metrics = []
+test-support = []
 
 [dependencies]
 async-trait = { workspace = true }
