--- a/modules/utils-core/Cargo.toml
+++ b/modules/utils-core/Cargo.toml
@@ -20,7 +20,7 @@ unsize = []
 
 [dependencies]
 async-trait = { workspace = true }
-critical-section = { workspace = true, optional = false }
+critical-section = { workspace = true, default-features = false, optional = false }
 spin = { workspace = true, default-features = false, features = ["mutex", "spin_mutex", "rwlock", "portable_atomic"] }
 portable-atomic = { workspace = true, default-features = false, features = ["critical-section"] }
 cortex-m = { workspace = true, optional = true }
