--- a/modules/actor-core/Cargo.toml
+++ b/modules/actor-core/Cargo.toml
@@ -10,6 +10,7 @@ repository = "https://github.com/j5ik2o/fraktor-rs"
 homepage = "https://github.com/j5ik2o/fraktor-rs"
 documentation = "https://docs.rs/fraktor-actor-core-rs"
 readme = "../../README.md"
+autoexamples = false
 
 [features]
 default = []
