--- a/modules/actor/Cargo.toml
+++ b/modules/actor/Cargo.toml
@@ -17,7 +17,7 @@ default = []
 alloc = []
 alloc-metrics = []
 test-support = []
-std = ["fraktor-utils-rs/std"]
+std = ["fraktor-utils-rs/std", "dep:tracing"]
 tokio-executor = ["dep:tokio", "std"]
 
 [dependencies]
@@ -35,6 +35,7 @@ erased-serde = { workspace = true }
 bincode = { workspace = true }
 futures = { workspace = true, features = ["alloc"] }
 tokio = { workspace = true, optional = true, features = ["rt", "rt-multi-thread", "macros", "time"] }
+tracing = { workspace = true, optional = true, features = ["std"] }
 
 [dev-dependencies]
 criterion = { workspace = true }
