--- a/modules/actor/Cargo.toml
+++ b/modules/actor/Cargo.toml
@@ -36,6 +36,7 @@ bincode = { workspace = true }
 futures = { workspace = true, features = ["alloc"] }
 tokio = { workspace = true, optional = true, features = ["rt", "rt-multi-thread", "macros", "time"] }
 tracing = { workspace = true, optional = true, features = ["std"] }
+tracing-subscriber = "0.3.20"
 
 [dev-dependencies]
 criterion = { workspace = true }
