refactor: update submodule URLs and improve code documentation

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "references/protoactor-go"]
 	path = references/protoactor-go
-	url = git@github.com:asynkron/protoactor-go.git
+	url = git@j5ik2o.github.com:asynkron/protoactor-go.git
 [submodule "references/pekko"]
 	path = references/pekko
-	url = git@github.com:apache/pekko.git
+	url = git@j5ik2o.github.com:apache/pekko.git
