--- a/modules/actor/Cargo.toml
+++ b/modules/actor/Cargo.toml
@@ -17,7 +17,7 @@ default = []
 alloc = []
 alloc-metrics = []
 test-support = []
-std = ["fraktor-utils-rs/std", "dep:tracing"]
+std = ["fraktor-utils-rs/std", "dep:tracing", "dep:tracing-subscriber"]
 tokio-executor = ["dep:tokio", "std"]
 
 [dependencies]
@@ -36,7 +36,7 @@ bincode = { workspace = true }
 futures = { workspace = true, features = ["alloc"] }
 tokio = { workspace = true, optional = true, features = ["rt", "rt-multi-thread", "macros", "time"] }
 tracing = { workspace = true, optional = true, features = ["std"] }
-tracing-subscriber = "0.3.20"
+tracing-subscriber = { version = "0.3.20", optional = true }
 
 [dev-dependencies]
 criterion = { workspace = true }
