--- a/modules/remote/Cargo.toml
+++ b/modules/remote/Cargo.toml
@@ -13,6 +13,9 @@ categories = ["concurrency", "network-programming"]
 
 [features]
 default = []
-std = []
+std = ["fraktor-actor-rs/std", "fraktor-utils-rs/std"]
 
 [dependencies]
+fraktor-actor-rs = { workspace = true }
+fraktor-utils-rs = { workspace = true, features = ["alloc", "unsize"] }
+portable-atomic = { workspace = true, default-features = false }
