--- a/Cargo.toml
+++ b/Cargo.toml
@@ -82,3 +82,4 @@ tracing = { version = "0.1.41", default-features = false }
 tracing-subscriber = { version = "0.3", default-features = false }
 heapless = { version = "0.9", default-features = false }
 hashbrown = { version = "0.14", default-features = false, features = ["ahash"] }
+anyhow = "1.0"
