--- a/modules/remote/Cargo.toml
+++ b/modules/remote/Cargo.toml
@@ -14,6 +14,7 @@ categories = ["concurrency", "network-programming"]
 [features]
 default = []
 std = ["fraktor-actor-rs/std", "fraktor-utils-rs/std"]
+tokio-executor = ["std", "fraktor-actor-rs/tokio-executor"]
 
 [dependencies]
 fraktor-actor-rs = { workspace = true }
@@ -22,3 +23,5 @@ portable-atomic = { workspace = true, default-features = false }
 
 [dev-dependencies]
 fraktor-actor-rs = { workspace = true, features = ["test-support"] }
+tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
+anyhow = { workspace = true }
