--- a/modules/remote/Cargo.toml
+++ b/modules/remote/Cargo.toml
@@ -21,6 +21,7 @@ test-support = []
 fraktor-actor-rs = { workspace = true }
 fraktor-utils-rs = { workspace = true, features = ["alloc", "unsize"] }
 portable-atomic = { workspace = true, default-features = false }
+hashbrown = { workspace = true }
 
 [dev-dependencies]
 fraktor-actor-rs = { workspace = true, features = ["test-support"] }
