--- a/modules/remote/Cargo.toml
+++ b/modules/remote/Cargo.toml
@@ -22,6 +22,7 @@ fraktor-actor-rs = { workspace = true }
 fraktor-utils-rs = { workspace = true, features = ["alloc", "unsize"] }
 portable-atomic = { workspace = true, default-features = false }
 hashbrown = { workspace = true }
+spin = { workspace = true }
 
 [dev-dependencies]
 fraktor-actor-rs = { workspace = true, features = ["test-support"] }
@@ -32,3 +33,8 @@ anyhow = { workspace = true }
 name = "quickstart"
 path = "tests/quickstart.rs"
 required-features = ["test-support"]
+
+[[example]]
+name = "loopback_quickstart"
+path = "examples/loopback_quickstart.rs"
+required-features = ["std", "test-support"]
