--- a/modules/remote/Cargo.toml
+++ b/modules/remote/Cargo.toml
@@ -15,6 +15,7 @@ categories = ["concurrency", "network-programming"]
 default = []
 std = ["fraktor-actor-rs/std", "fraktor-utils-rs/std"]
 tokio-executor = ["std", "fraktor-actor-rs/tokio-executor"]
+tokio-transport = ["std", "dep:tokio"]
 test-support = []
 
 [dependencies]
@@ -23,6 +24,7 @@ fraktor-utils-rs = { workspace = true, features = ["alloc", "unsize"] }
 portable-atomic = { workspace = true, default-features = false }
 hashbrown = { workspace = true }
 spin = { workspace = true }
+tokio = { workspace = true, optional = true, features = ["rt-multi-thread", "net", "sync", "time", "io-util"] }
 
 [dev-dependencies]
 fraktor-actor-rs = { workspace = true, features = ["test-support"] }
@@ -38,3 +40,8 @@ required-features = ["test-support"]
 name = "loopback_quickstart"
 path = "examples/loopback_quickstart/main.rs"
 required-features = ["std", "test-support"]
+
+[[example]]
+name = "tokio_tcp_quickstart"
+path = "examples/tokio_tcp_quickstart/main.rs"
+required-features = ["std", "test-support", "tokio-transport"]
