--- a/modules/cluster/Cargo.toml
+++ b/modules/cluster/Cargo.toml
@@ -26,3 +26,8 @@ thiserror = { workspace = true, default-features = false }
 hashbrown = { workspace = true, default-features = false }
 rapidhash = { version = "1.4", default-features = false }
 libm = { version = "0.2", default-features = false }
+serde = { version = "1.0", features = ["derive"], default-features = false }
+serde_json = { version = "1.0", features = ["alloc"] }
+
+[dev-dependencies]
+tempfile = "3.10"
