feat: enhance ProviderWatchHub to track snapshot hash changes and invalidation status

--- a/modules/cluster/Cargo.toml
+++ b/modules/cluster/Cargo.toml
@@ -31,3 +31,8 @@ serde_json = { version = "1.0", features = ["alloc"] }
 
 [dev-dependencies]
 tempfile = "3.10"
+
+[[test]]
+name = "provisioning_flow"
+path = "tests/provisioning_flow.rs"
+required-features = ["std"]
