--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v6
       - name: Setup Rust toolchain (nightly)
-        uses: dtolnay/rust-toolchain@nightly
+        uses: dtolnay/rust-toolchain@nightly-2025-01-15
         with:
           components: rustfmt
       - name: Setup Cargo cache
@@ -49,7 +49,7 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v6
       - name: Setup Rust toolchain (nightly)
-        uses: dtolnay/rust-toolchain@nightly
+        uses: dtolnay/rust-toolchain@nightly-2025-01-15
         with:
           components: clippy
       - name: Setup Cargo cache
@@ -78,7 +78,7 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v6
       - name: Setup Rust toolchain (nightly)
-        uses: dtolnay/rust-toolchain@nightly
+        uses: dtolnay/rust-toolchain@nightly-2025-01-15
       - name: Setup Cargo cache
         uses: Swatinem/rust-cache@v2
         with:
@@ -95,7 +95,7 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v6
       - name: Setup Rust toolchain (nightly)
-        uses: dtolnay/rust-toolchain@nightly
+        uses: dtolnay/rust-toolchain@nightly-2025-01-15
       - name: Setup Cargo cache
         uses: Swatinem/rust-cache@v2
         with:
@@ -112,7 +112,7 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v6
       - name: Setup Rust toolchain (nightly)
-        uses: dtolnay/rust-toolchain@nightly
+        uses: dtolnay/rust-toolchain@nightly-2025-01-15
       - name: Setup Cargo cache
         uses: Swatinem/rust-cache@v2
         with:
