--- a/modules/cluster/Cargo.toml
+++ b/modules/cluster/Cargo.toml
@@ -15,12 +15,16 @@ autoexamples = false
 [features]
 default = []
 std = ["fraktor-actor-rs/std", "fraktor-remote-rs/std", "fraktor-utils-rs/std"]
+aws-ecs = ["std", "dep:aws-sdk-ecs", "dep:aws-config", "dep:tokio"]
 test-support = ["std", "fraktor-actor-rs/test-support", "fraktor-remote-rs/test-support"]
 
 [dependencies]
 fraktor-actor-rs = { workspace = true }
 fraktor-utils-rs = { workspace = true }
 fraktor-remote-rs = { workspace = true }
+aws-sdk-ecs = { workspace = true, optional = true }
+aws-config = { workspace = true, optional = true }
+tokio = { workspace = true, optional = true, features = ["rt", "sync", "time"] }
 
 [dev-dependencies]
 fraktor-actor-rs = { workspace = true, features = ["std", "tokio-executor", "test-support"] }
