--- a/modules/remote/Cargo.toml
+++ b/modules/remote/Cargo.toml
@@ -16,6 +16,7 @@ default = []
 std = ["fraktor-actor-rs/std", "fraktor-utils-rs/std"]
 tokio-executor = ["std", "fraktor-actor-rs/tokio-executor"]
 tokio-transport = ["std", "dep:tokio"]
+force-portable-arc = ["fraktor-utils-rs/force-portable-arc"]
 test-support = []
 
 [dependencies]
